[gd_scene load_steps=9 format=3 uid="uid://c7qf21m5ypv6r"]

[ext_resource type="Theme" uid="uid://dxuwq7yidja37" path="res://theme/new_theme.tres" id="1_56njq"]
[ext_resource type="Script" path="res://battles/GUI/statblockItem.gd" id="1_dkk00"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fmr1g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6oyw6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbm82"]
bg_color = Color(0.0941176, 0.0117647, 0.0470588, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cee62"]
bg_color = Color(0.305882, 0.690196, 0.419608, 1)
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqqus"]
bg_color = Color(0.0941176, 0.0117647, 0.0470588, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gvnks"]
bg_color = Color(0.305882, 0.690196, 1, 1)
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[node name="StatblockItem" type="HBoxContainer"]
alignment = 1
script = ExtResource("1_dkk00")

[node name="PartyMemberLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("1_56njq")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_fmr1g")
text = "Party M One"

[node name="ContainerLabelHP" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_56njq")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "HP"

[node name="PanelContainerHP" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_6oyw6")

[node name="ProgressBarHP" type="ProgressBar" parent="PanelContainerHP"]
custom_minimum_size = Vector2(86, 10)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/background = SubResource("StyleBoxFlat_dbm82")
theme_override_styles/fill = SubResource("StyleBoxFlat_cee62")
max_value = 30.0
value = 20.0
show_percentage = false

[node name="LabelHP" type="Label" parent="PanelContainerHP"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("1_56njq")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "20/30"

[node name="ContainerLabelMP" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_56njq")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "MP"

[node name="PanelContainerMP" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_6oyw6")

[node name="ProgressBarMP" type="ProgressBar" parent="PanelContainerMP"]
custom_minimum_size = Vector2(86, 10)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/background = SubResource("StyleBoxFlat_gqqus")
theme_override_styles/fill = SubResource("StyleBoxFlat_gvnks")
max_value = 30.0
value = 20.0
show_percentage = false

[node name="LabelMP" type="Label" parent="PanelContainerMP"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("1_56njq")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "6/8"
